# python-makemkv

./: .bumpversion.cfg  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  apdefs.h  mkdocs.yml  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  run-nox.yaml
docs/: cli.md  conf.py  index.md  installation.md  quickstart.rst  reference.rst  requirements.md  requirements.txt  usage.md
docs/reference/: makemkv.md  output_codes.md  progress.md  types.md
docs/source/: conf.py  index.rst  quickstart.rst  reference.rst
docs/stylesheets/: extra.css
makemkv/: __init__.py  __main__.py  _cli_params.py  makemkv.py  output_codes.py  progress.py  types.py
tests/: test_makemkv.py
