[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "makemkv"
version = "0.2.1"
description = "Python wrapper for MakeMKV"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "d-k-bo", email = "dkbo@mail.de" }]
keywords = [
    'mkv',
    'dvd',
    'bluray',
    'ripping',
    'makemkv',
    'remuxing',
    'metadata',
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video",
]
dependencies = ["iso639-lang >= 2.0.0", "typing-extensions >= 4.0"]

    [project.optional-dependencies]
    cli = ["click >= 8.0", "rich >= 11.0"]
    docs = [
        "mkdocs ~= 1.2.3",
        "mkdocstrings[python] ~= 0.18.0",
        "mkdocs-material ~= 8.1.11 ",
    ]

    [project.urls]
    Documentation = "https://python-makemkv.readthedocs.io/en/latest/"
    Source = "https://github.com/d-k-bo/python-makemkv"

    [project.scripts]
    pymakemkv = "makemkv.__main__:cli"


[tool]

    [tool.black]
    line-length = 79

    [tool.isort]
    profile = "black"
    line_length = 79

    [tool.mypy]
    show_error_codes = true
    warn_unused_ignores = true
    exclude = ["venv/", ".nox/"]

    [tool.flakeheaven]
    format = "colored"
    max_line_length = 79
    exclude = ["venv/", ".nox/"]
    show_source = true
    docstring-convention = "google"

        [tool.flakeheaven.plugins]
        "flake8-*" = ["+*"]
        flake8-annotations = ["+*", "-ANN10?"]
        flake8-docstrings = ["-*"]
        mccabe = ["+*"]
        pycodestyle = ["+*", "-W503"]
        pyflakes = ["+*"]
        pylint = ["+*"]

        [tool.flakeheaven.exceptions."makemkv/"]
        flake8-docstrings = ["+*", "-D10?"]

        [tool.flakeheaven.exceptions."makemkv/__init__.py"]
        pyflakes = ["-F401"]
