[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "makemkv"
version = "0.3.1"
description = "Python wrapper for MakeMKV"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "d-k-bo", email = "dkbo@mail.de" }]
keywords = [
    'mkv',
    'dvd',
    'bluray',
    'ripping',
    'makemkv',
    'remuxing',
    'metadata',
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video",
]
dependencies = ["iso639-lang >= 2.0.0", "typing-extensions >= 4.0"]

    [project.optional-dependencies]
    cli = ["click >= 8.0", "rich >= 11.0"]
    docs = [
        "mkdocs ~= 1.2.3",
        "mkdocstrings[python] ~= 0.18.0",
        "mkdocs-material ~= 8.1.11 ",
    ]
    test = ["pytest>=7.1.2", "pytest-cov>=3.0.0", "trycast>=1.0.0"]

    [project.urls]
    Documentation = "https://python-makemkv.readthedocs.io/en/latest/"
    Source = "https://github.com/d-k-bo/python-makemkv"

    [project.scripts]
    pymakemkv = "makemkv.__main__:cli"


[tool]

    [tool.black]

    [tool.isort]
    profile = "black"

    [tool.mypy]
    show_error_codes = true
    warn_unused_ignores = true
    files = ["makemkv/", "tests/"]

    [tool.flake8]
    # pip install pyproject-flake8 flake8-annotations flake8-bugbear flake8-docstrings
    max-line-length = 88
    extend-ignore = [
        "E203",  # whitespace before ‘,’, ‘;’, or ‘:’ (incompatible with PEP8 and black)
        "E501",  # line too long (to strict, use B950 instead)
        "ANN10",  # Missing type annotation for self/cls
        "D1", # Missing docstring
    ]
    extend-select = ["B950"]  # line too long    
    docstring-convention = "google"  # flake8-docstrings
    per-file-ignores = ["tests/*: D, ANN", "noxfile.py: D, ANN"]
